<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_settings_category" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSavename"
            android:summary="@string/pref_settings_summary"
            android:title="@string/pref_settings_title" >
        </CheckBoxPreference>
        <EditTextPreference
            android:title="@string/prefsavedir_title"
            android:summary="@string/pref_savedir_summary"
            android:key="prefSavedir"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/app_name" >
        <Preference
            android:key="about"
            android:title="About"
            android:summary="About YouTube Downloader. By ingamedeo">
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>